# waki

./: README.md  compose.yml  psql.sh
client/: .eslintrc.yml  codegen.yml  graphql.schema.json  package.json  tailwind.config.js
client/components/: AppNavBar.tsx
client/graphql/: createPage.graphql  getPageById.graphql  getPageByTitle.graphql
client/pages/: _app.tsx  index.tsx
client/pages/pages/: [...title].tsx
client/src/: client.ts
client/styles/: globals.css
server/: .env  Cargo.toml  compose.yml  init_db.sh  shema.graphql
server/migrations/: 20220904072641_create_tables.sql  20220904140919_create_tables.sql
server/scripts/: init_db.sh  psql.sh
server/src/: db.rs  main.rs  model.rs
server/src/model/: mutation.rs  query.rs
