[package]
name = "wiki-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.63"
async-graphql = "4.0.12"
async-graphql-actix-web = "4.0.12"
chrono = "0.4.22"
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "migrate"] }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
